--- a/front/src/index.css
+++ b/front/src/index.css
@@ -37,3 +37,17 @@ code {
 #log{
   max-width: 14vh;
 }
+
+.bag-quantity {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  background: #ACD9B2;
+  font-size: 14px;
+  font-weight: 700;
+  color: black;
+  margin-left: 5px;
+}
