--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,27 +1,21 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 
 /* NavBar */
 
 .nav-bar {
   height: 70px;
-  background: #F5F5F5;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 4rem;
-} 
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;} 
+
 .nav-bar a {
   text-decoration: none;
   color:black
@@ -51,3 +45,67 @@ code {
   color: black;
   margin-left: 5px;
 }
+
+/* HomePage */
+
+.home-container {
+  padding: 2rem 4rem;
+}
+.home-container h2 {
+  font-size: 40px;
+  font-weight: 400;
+  text-align: center;
+}
+.products {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+}
+.product {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 1rem auto;
+  padding: 1rem;
+  border-radius: 15px;
+  width: 250px;
+  max-width: 100%;
+  height: 590px;
+  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.5),
+    2px 2px 5px rgba(94, 104, 121, 0.3);
+}
+.product h3 {
+  font-size: 25px;
+  font-weight: 400;
+}
+.product img {
+  width: 80%;
+  margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+.product .details {
+  display: flex;
+  flex-direction: inherit;
+  align-items: center;
+}
+.product .details .price {
+  font-size: 20px;
+  font-weight: 700;
+  margin: 0rem 0rem 1.5rem;
+}
+.product button {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  margin-top: 2rem;
+  font-size: 17px;
+  font-weight: 700;
+  background-color:  #ACD9B2;
+  color: black;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
