--- a/front/src/index.css
+++ b/front/src/index.css
@@ -109,7 +109,6 @@
   cursor: pointer;
 }
 
-
 /* Cart */
 .cart-container {
   padding: 2rem 4rem;
@@ -190,7 +189,7 @@
 .cart-item .cart-product-total-price {
   padding-right: 0.5rem;
   justify-self: right;
-  font-weight: 700
+  font-weight: 700;
 }
 
 /* cart summary */
@@ -234,11 +233,10 @@
   width: 100%;
   height: 40px;
   border-radius: 5px;
-  font-size: 17px;
-  font-weight: 700;
+  font-weight: 400;
   letter-spacing: 1.15px;
-  background-color: #ACD9B2;
-  color:black;
+  background-color:  #ACD9B2;
+  color: black;
   border: none;
   outline: none;
   cursor: pointer;
@@ -265,4 +263,38 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+/* Responsive */
+
+@media (max-width: 665px) {
+  /* NavBar */
+  .nav-bar {
+    padding: 0 1rem;
+  }
+  .nav-bar h2 {
+    font-size: 30px;
+  }
+
+  /* Cart */
+  .cart-container {
+    padding: 2rem;
+  }
+  .cart-container .titles {
+    display: none;
+  }
+  .cart-item,
+  .cart-container .titles {
+    grid-template-columns: 1fr;
+    row-gap: 1rem;
+  }
+  .cart-item .cart-product-total-price {
+    justify-self: left;
+  }
+  .cart-summary {
+    flex-direction: column;
+  }
+  .cart-summary .clear-btn {
+    margin-bottom: 2rem;
+  }
 }
